Fixed some minor errors.

--- a/Projects.html
+++ b/Projects.html
@@ -73,7 +73,7 @@
       <div class="jumbotron jumbotron-fluid">
         <!-- Container, row and column class implemented from bootstrap grid system documentation -->
         <div class="container">
-          <h1 class="display-4 text-center font-weight-bold">WELCOME TO MY PROJECTS PAGE</h1>
+          <h1 class="display-4 text-center font-weight-bold">WELCOME TO THE PROJECTS PAGE</h1>
           <p class="lead text-center">This Page Contains Details Of All The Projects I Have Created Over The Years As A Computor Programmer</p>
         </div>
       </div>
