--- a/Contact.html
+++ b/Contact.html
@@ -73,8 +73,8 @@
       <div class="jumbotron jumbotron-fluid">
         <!-- Container, row and column class implemented from bootstrap grid system documentation -->
         <div class="container">
-          <h1 class="display-4 text-center font-weight-bold">WELCOME TO MY PROJECTS PAGE</h1>
-          <p class="lead text-center">This Page Contains Details Of All The Projects I Have Created Over The Years As A Computor Programmer</p>
+          <h1 class="display-4 text-center font-weight-bold">WELCOME TO THE CONTACT DETAILS PAGE</h1>
+          <p class="lead text-center">The Page That Will Show You How To Get In Touch With Me</p>
         </div>
       </div>
     </section>
@@ -163,7 +163,7 @@
     </div>
     <!-- End of footer -->
   </footer>
-  
+
 </body>
 
 </html>
