Made finishing touches to pages. Commented master.css file. Only task left is the media queries.

--- a/Contact.html
+++ b/Contact.html
@@ -136,6 +136,9 @@
 
   <!-- Start of footer -->
   <footer>
+<!-- hr tag used to create a line to sperate footer from rest of page -->
+    <hr class="my-4">
+
     <!-- Space class created to push footer up from bottom of page -->
     <div class="space">
       <div class="container">
