--- a/index.html
+++ b/index.html
@@ -89,14 +89,17 @@
       <!-- bg-dark used to give black darker barkground to certain elements -->
       <div class="container bg-dark">
         <div class="row">
+          
+          <!-- Padding class, creates space to make page more appealing -->
+          <div class="padding">
 
           <!-- Media  and media body class implemented from Bootstrap documentation -->
           <div class="media">
             <!-- image style to be an appropriate size -->
             <img class="align-self-center mr-3" src="home picture.jpeg" alt="Generic placeholder image" style="max-width:300px;
-            max-height:300px">
+            max-height:300px; padding-bottom: 20px">
             <div class="media-body">
-              <h3 class="mt-0" style="padding-top:20px;">About Me</h3>
+              <h3 class="mt-0">About Me</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
@@ -107,6 +110,8 @@
           </div>
         </div>
       </div>
+    </div>
+
     </section>
 
     <section>
