Applied media queries to items that required it. Did not manage to apply media queries to cards on index page. Also applied comments to recently added code

--- a/CV.html
+++ b/CV.html
@@ -93,8 +93,12 @@
 
             <!-- Media class and media body implemented from Bootstrap documentation -->
             <div class="media">
+              <!-- Class that applies media query -->
+              <div class="query">
               <img class="align-self-center mr-3" src="home picture.jpeg" alt="Generic placeholder image" style="max-width:300px;
                 max-height:300px">
+              </div>
+
               <div class="media-body">
                 <h3 class="mt-0" style="padding-top:20px;">Mr Max Iain Fyall</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
