--- a/Projects.html
+++ b/Projects.html
@@ -96,7 +96,10 @@
 
           <!-- Media class and media body implemented from Bootstrap documentation -->
           <div class="media">
+            <!-- Class that applies media query -->
+            <div class="query">
             <img class="mr-3" src="https://picsum.photos/500/600/?random" alt="Generic placeholder image" style="max-height:250px; max-width:300px">
+          </div>
             <div class="media-body">
               <h3 class="mt-0">Project 1</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -113,7 +116,7 @@
             </a>
 
           </p>
-          
+
           <!-- Content inside collapsed box -->
           <div class="collapse" id="collapseExample1">
             <div class="card card-body bg-dark">
@@ -135,7 +138,10 @@
         <div class="padding">
 
           <div class="media">
+            <div class="query">
             <img class="mr-3" src="https://picsum.photos/500/600/?random" alt="Generic placeholder image" style="max-height:250px; max-width:300px">
+          </div>
+
             <div class="media-body">
               <h3 class="mt-0">Project 2</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -168,7 +174,10 @@
         <div class="padding">
 
           <div class="media">
+            <div class="query">
             <img class="mr-3" src="https://picsum.photos/500/600/?random" alt="Generic placeholder image" style="max-height:250px; max-width:300px">
+          </div>
+
             <div class="media-body">
               <h3 class="mt-0">Project 3</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
