--- a/index.html
+++ b/index.html
@@ -89,15 +89,23 @@
       <!-- bg-dark used to give black darker barkground to certain elements -->
       <div class="container bg-dark">
         <div class="row">
-          
+
           <!-- Padding class, creates space to make page more appealing -->
           <div class="padding">
 
           <!-- Media  and media body class implemented from Bootstrap documentation -->
           <div class="media">
+
+            <!-- Class that applies media query -->
+            <div class="query">
+
             <!-- image style to be an appropriate size -->
             <img class="align-self-center mr-3" src="home picture.jpeg" alt="Generic placeholder image" style="max-width:300px;
             max-height:300px; padding-bottom: 20px">
+
+          </div>
+
+
             <div class="media-body">
               <h3 class="mt-0">About Me</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -106,6 +114,7 @@
                 ex
                 ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
                 laborum.</p>
+
             </div>
           </div>
         </div>
@@ -141,7 +150,7 @@
           <div class="col">
             <!-- card template implemented from bootstrap documentation -->
             <!-- 1st Card -->
-            <div class="card bg-light" style="width: 18rem;">
+            <div class="card mb-3 bg-light" style="width: 18rem;">
               <!-- Random image generated each time webpage is loaded -->
               <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
               <div class="card-body bg-dark ml-auto">
@@ -161,7 +170,7 @@
 
           <!-- 2nd Card -->
           <div class="col">
-            <div class="card bg-light" style="width: 18rem;">
+            <div class="card mb-3 bg-light" style="width: 18rem;">
               <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
               <div class="card-body bg-dark ml auto">
                 <h5 class="card-title">My CV</h5>
@@ -179,7 +188,7 @@
 
           <!-- 3rd Card -->
           <div class="col">
-            <div class="card bg-light" style="width: 18rem;">
+            <div class="card mb-3 bg-light" style="width: 18rem;">
               <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
               <div class="card-body bg-dark ml auto">
                 <h5 class="card-title">Contact Details</h5>
@@ -191,12 +200,12 @@
 
                   <a href="Contact.html" class="btn btn-primary">Take Me There!</a>
                 </div>
-
-              </div>
             </div>
           </div>
         </div>
       </div>
+    </div>
+
 
       <hr class="my-4">
     </section>
