--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <h3 class="mt-0">About Me</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                 commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+              <p class="mb-0" style="padding-bottom: 10px">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex
                 ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
                 laborum.</p>
@@ -150,7 +150,7 @@
           <div class="col">
             <!-- card template implemented from bootstrap documentation -->
             <!-- 1st Card -->
-            <div class="card mb-3 bg-light" style="width: 18rem;">
+            <div class="container card mb-3 bg-dark" style="width: 18rem;">
               <!-- Random image generated each time webpage is loaded -->
               <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
               <div class="card-body bg-dark ml-auto">
@@ -170,7 +170,7 @@
 
           <!-- 2nd Card -->
           <div class="col">
-            <div class="card mb-3 bg-light" style="width: 18rem;">
+            <div class="container card mb-3 bg-dark" style="width: 18rem;">
               <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
               <div class="card-body bg-dark ml auto">
                 <h5 class="card-title">My CV</h5>
@@ -188,7 +188,8 @@
 
           <!-- 3rd Card -->
           <div class="col">
-            <div class="card mb-3 bg-light" style="width: 18rem;">
+            <!-- <div class="container"> -->
+            <div class="container card mb-3 bg-dark" style="width: 18rem;">
               <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
               <div class="card-body bg-dark ml auto">
                 <h5 class="card-title">Contact Details</h5>
@@ -203,6 +204,7 @@
             </div>
           </div>
         </div>
+        <!-- </div> -->
       </div>
     </div>
 
