Made some minor adjustments. Changed font of navbar and footer. Also made footer text bold

--- a/CV.html
+++ b/CV.html
@@ -126,12 +126,10 @@
 
             <!-- heading on top of collapsable bar -->
             <h2>Personal Statement</h2>
-            <p>
-              <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">
-                Click to View/Collapse
-              </a>
 
-            </p>
+              <p class="btn btn-primary" data-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">
+                Click to View/Collapse
+              </p>
 
             <!-- Content inside collapsed box -->
             <div class="collapse" id="collapseExample1">
@@ -144,12 +142,9 @@
 
             <!-- Second Collapsable item with heading-->
             <h2>Work Experiance</h2>
-            <p>
-              <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample2">
+              <p class="btn btn-primary" data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample2">
                 Click to View/Collapse
-              </a>
-
-            </p>
+              </p>
 
             <!-- Content inside collapsed box -->
             <div class="collapse" id="collapseExample2">
@@ -162,12 +157,10 @@
 
             <!-- Third Collapsable item with heading -->
             <h2>My Grades</h2>
-            <p style="padding-bottom:25px">
-              <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample3">
-                Click to View/Collapse
-              </a>
 
-            </p>
+              <p class="btn btn-primary" data-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample3">
+                Click to View/Collapse
+              </p>
 
             <!-- Content inside collapsed box -->
             <div class="collapse" id="collapseExample3">
@@ -205,7 +198,7 @@
 
           <!-- a tag turned into button to take user to contact details page-->
           <div class="font">
-            <a href="Contact.html" class="btn btn-primary" style="margin-top: 10px">Take Me There!</a>
+            <p href="Contact.html" class="btn btn-primary" style="margin-top: 10px">Take Me There!</p>
           </div>
 
         </blockquote>
@@ -227,7 +220,7 @@
           <!-- Footer contains links to my social media pages -->
           <div class="navbar-brand col mb-0 h3" style="padding-top:10px;">
 
-            <a>Follow me on Social Media</a>
+            <a class= font-weight-bold>Follow me on Social Media</a>
           </div>
 
           <div class="col-md-auto">
