--- a/Contact.html
+++ b/Contact.html
@@ -98,10 +98,14 @@
 
             <!-- List group used for better organisation of grades, implemented from bootstrap documentation -->
             <ul class="list-group">
+
+              <!-- Class used to change font of text in list -->
+              <div class="blackText">
               <li class="list-group-item text-dark">Phone Number: 123456789</li>
               <li class="list-group-item text-dark">Email: max.fyall@hotmail.co.uk</li>
               <li class="list-group-item text-dark">Gmail: exampleperson@gmail.com</li>
             </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -146,7 +150,7 @@
           <!-- Footer contains links to my social media pages -->
           <div class="navbar-brand col mb-0 h3" style="padding-top:10px;">
 
-            <a>Follow me on Social Media</a>
+            <a class= font-weight-bold>Follow me on Social Media</a>
           </div>
 
           <div class="col-md-auto">
