--- a/Projects.html
+++ b/Projects.html
@@ -110,12 +110,9 @@
           </div>
 
           <!-- Collapsable content, implemented from bootstrap documentation-->
-          <p>
-            <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">
+            <p class="btn btn-primary" data-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">
               Click to Learn More
-            </a>
-
-          </p>
+            </p>
 
           <!-- Content inside collapsed box -->
           <div class="collapse" id="collapseExample1">
@@ -150,12 +147,11 @@
                 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
           </div>
-          <p>
-            <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample2">
-              Click to Learn More
-            </a>
 
-          </p>
+            <p class="btn btn-primary" data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample2">
+              Click to Learn More
+            </p>
+
           <div class="collapse" id="collapseExample2">
             <div class="card card-body bg-dark">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -187,12 +183,10 @@
             </div>
           </div>
 
-          <p>
-            <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample3">
+            <p class="btn btn-primary" data-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample3">
               Click to Learn More
-            </a>
+            </p>
 
-          </p>
           <div class="collapse" id="collapseExample3">
             <div class="card card-body bg-dark">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -237,7 +231,7 @@
           <!-- Footer contains links to my social media pages -->
           <div class="navbar-brand col mb-0 h3" style="padding-top:10px;">
 
-            <a>Follow me on Social Media</a>
+            <a class= font-weight-bold>Follow me on Social Media</a>
           </div>
 
           <div class="col-md-auto">
