--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           <div class="col">
             <!-- card template implemented from bootstrap documentation -->
             <!-- 1st Card -->
-            <div class="container card mb-3 bg-dark" style="width: 18rem;">
+            <div class="container card mb-3 bg-dark" style="width: 18rem; padding-top: 10px">
               <!-- Random image generated each time webpage is loaded -->
               <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
               <div class="card-body bg-dark ml-auto">
@@ -162,7 +162,7 @@
                   <!-- font class create to change font and color of button -->
                 <div class="font">
                   <!-- Button takes user to advertised webpage -->
-                  <a href="Projects.html" class="btn btn-primary">Take Me There!</a>
+                  <p href="Projects.html" class="btn btn-primary">Take Me There!</p>
                 </div>
               </div>
             </div>
@@ -170,7 +170,7 @@
 
           <!-- 2nd Card -->
           <div class="col">
-            <div class="container card mb-3 bg-dark" style="width: 18rem;">
+            <div class="container card mb-3 bg-dark" style="width: 18rem; padding-top:10px">
               <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
               <div class="card-body bg-dark ml auto">
                 <h5 class="card-title">My CV</h5>
@@ -180,7 +180,7 @@
                   laborum.</p>
 
                 <div class="font">
-                  <a href="CV.html" class="btn btn-primary">Take Me There!</a>
+                  <p href="CV.html" class="btn btn-primary">Take Me There!</p>
                 </div>
               </div>
             </div>
@@ -189,7 +189,7 @@
           <!-- 3rd Card -->
           <div class="col">
             <!-- <div class="container"> -->
-            <div class="container card mb-3 bg-dark" style="width: 18rem;">
+            <div class="container card mb-3 bg-dark" style="width: 18rem; padding-top:10px">
               <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
               <div class="card-body bg-dark ml auto">
                 <h5 class="card-title">Contact Details</h5>
@@ -199,7 +199,7 @@
                   laborum.</p>
                 <div class="font">
 
-                  <a href="Contact.html" class="btn btn-primary">Take Me There!</a>
+                  <p href="Contact.html" class="btn btn-primary">Take Me There!</p>
                 </div>
             </div>
           </div>
@@ -225,7 +225,7 @@
 
           <!-- Footer contains links to my social media pages -->
           <div class="navbar-brand col mb-0 h3" style="padding-top:10px;">
-            <a>Follow me on Social Media</a>
+            <a class= font-weight-bold>Follow me on Social Media</a>
           </div>
 
 
