Made some final adjustments. Fixed buttons on index so the links work. Changed font in Navbar and footer.

--- a/index.html
+++ b/index.html
@@ -159,11 +159,10 @@
                   aliquip ex ea
                   commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
                   laborum..</p>
-                  <!-- font class create to change font and color of button -->
-                <div class="font">
+                
                   <!-- Button takes user to advertised webpage -->
-                  <p href="Projects.html" class="btn btn-primary">Take Me There!</p>
-                </div>
+                  <a href="Projects.html" class="btn btn-primary">Take Me There!</a>
+
               </div>
             </div>
           </div>
@@ -179,9 +178,9 @@
                   commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
                   laborum.</p>
 
-                <div class="font">
-                  <p href="CV.html" class="btn btn-primary">Take Me There!</p>
-                </div>
+
+                  <a href="CV.html" class="btn btn-primary">Take Me There!</a>
+
               </div>
             </div>
           </div>
@@ -197,10 +196,10 @@
                   aliquip ex ea
                   commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
                   laborum.</p>
-                <div class="font">
 
-                  <p href="Contact.html" class="btn btn-primary">Take Me There!</p>
-                </div>
+
+                  <a href="Contact.html" class="btn btn-primary">Take Me There!</a>
+
             </div>
           </div>
         </div>
