--- a/CV.html
+++ b/CV.html
@@ -198,7 +198,7 @@
 
           <!-- a tag turned into button to take user to contact details page-->
           <div class="font">
-            <p href="Contact.html" class="btn btn-primary" style="margin-top: 10px">Take Me There!</p>
+            <a href="Contact.html" class="btn btn-primary" style="margin-top: 10px">Take Me There!</a>
           </div>
 
         </blockquote>
