Revert "test commit"
This reverts commit ee02d9e55de1a916f8abc9b70eb9894b82020210.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <!-- Title of Page oh really?-->
+  <!-- Title of Page -->
   <title>Home</title>
 
   <!-- Link to css file to reset all css of base page -->
@@ -159,7 +159,7 @@
                   aliquip ex ea
                   commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
                   laborum..</p>
-
+                
                   <!-- Button takes user to advertised webpage -->
                   <a href="Projects.html" class="btn btn-primary">Take Me There!</a>
 
